############################################################################
## So@GUI@/data/materials/summer/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/summer
material_DATA = \
	summer.0 summer.1 summer.2 summer.3 summer.4 \
	summer.5 summer.6 summer.7 summer.8 summer.9 \
	summer.10 summer.11 summer.12 summer.13 summer.14 \
	summer.15 summer.16 summer.17 summer.18 summer.19 \
	summer.20 summer.21 summer.22 summer.23 summer.24 \
	summer.25 summer.26 summer.27 summer.28 summer.29 \
	summer.30 summer.31 summer.32 summer.33 summer.34

BUILT_SOURCES = \
	summer.h \
	summer_0.h summer_1.h summer_2.h summer_3.h summer_4.h \
	summer_5.h summer_6.h summer_7.h summer_8.h summer_9.h \
	summer_10.h summer_11.h summer_12.h summer_13.h summer_14.h \
	summer_15.h summer_16.h summer_17.h summer_18.h summer_19.h \
	summer_20.h summer_21.h summer_22.h summer_23.h summer_24.h \
	summer_25.h summer_26.h summer_27.h summer_28.h summer_29.h \
	summer_30.h summer_31.h summer_32.h summer_33.h summer_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

summer.h: $(top_srcdir)/materials/summer/summer.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

summer_0.h: \
  $(top_srcdir)/materials/summer/summer.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.0 \
	  > $@

summer_1.h: \
  $(top_srcdir)/materials/summer/summer.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.1 \
	  > $@

summer_2.h: \
  $(top_srcdir)/materials/summer/summer.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.2 \
	  > $@

summer_3.h: \
  $(top_srcdir)/materials/summer/summer.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.3 \
	  > $@

summer_4.h: \
  $(top_srcdir)/materials/summer/summer.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.4 \
	  > $@

summer_5.h: \
  $(top_srcdir)/materials/summer/summer.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.5 \
	  > $@

summer_6.h: \
  $(top_srcdir)/materials/summer/summer.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.6 \
	  > $@

summer_7.h: \
  $(top_srcdir)/materials/summer/summer.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.7 \
	  > $@

summer_8.h: \
  $(top_srcdir)/materials/summer/summer.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.8 \
	  > $@

summer_9.h: \
  $(top_srcdir)/materials/summer/summer.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.9 \
	  > $@

summer_10.h: \
  $(top_srcdir)/materials/summer/summer.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.10 \
	  > $@

summer_11.h: \
  $(top_srcdir)/materials/summer/summer.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.11 \
	  > $@

summer_12.h: \
  $(top_srcdir)/materials/summer/summer.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.12 \
	  > $@

summer_13.h: \
  $(top_srcdir)/materials/summer/summer.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.13 \
	  > $@

summer_14.h: \
  $(top_srcdir)/materials/summer/summer.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.14 \
	  > $@

summer_15.h: \
  $(top_srcdir)/materials/summer/summer.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.15 \
	  > $@

summer_16.h: \
  $(top_srcdir)/materials/summer/summer.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.16 \
	  > $@

summer_17.h: \
  $(top_srcdir)/materials/summer/summer.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.17 \
	  > $@

summer_18.h: \
  $(top_srcdir)/materials/summer/summer.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.18 \
	  > $@

summer_19.h: \
  $(top_srcdir)/materials/summer/summer.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.19 \
	  > $@

summer_20.h: \
  $(top_srcdir)/materials/summer/summer.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.20 \
	  > $@

summer_21.h: \
  $(top_srcdir)/materials/summer/summer.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.21 \
	  > $@

summer_22.h: \
  $(top_srcdir)/materials/summer/summer.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.22 \
	  > $@

summer_23.h: \
  $(top_srcdir)/materials/summer/summer.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.23 \
	  > $@

summer_24.h: \
  $(top_srcdir)/materials/summer/summer.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.24 \
	  > $@

summer_25.h: \
  $(top_srcdir)/materials/summer/summer.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.25 \
	  > $@

summer_26.h: \
  $(top_srcdir)/materials/summer/summer.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.26 \
	  > $@

summer_27.h: \
  $(top_srcdir)/materials/summer/summer.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.27 \
	  > $@

summer_28.h: \
  $(top_srcdir)/materials/summer/summer.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.28 \
	  > $@

summer_29.h: \
  $(top_srcdir)/materials/summer/summer.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.29 \
	  > $@

summer_30.h: \
  $(top_srcdir)/materials/summer/summer.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.30 \
	  > $@

summer_31.h: \
  $(top_srcdir)/materials/summer/summer.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.31 \
	  > $@

summer_32.h: \
  $(top_srcdir)/materials/summer/summer.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.32 \
	  > $@

summer_33.h: \
  $(top_srcdir)/materials/summer/summer.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.33 \
	  > $@

summer_34.h: \
  $(top_srcdir)/materials/summer/summer.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $(top_srcdir)/materials/summer/summer.34 \
	  > $@

############################################################################
