############################################################################
## So@GUI@/data/materials/winter/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/winter
material_DATA = \
	winter.0 winter.1 winter.2 winter.3 winter.4 \
	winter.5 winter.6 winter.7 winter.8 winter.9 \
	winter.10 winter.11 winter.12 winter.13 winter.14 \
	winter.15 winter.16 winter.17 winter.18 winter.19 \
	winter.20 winter.21 winter.22 winter.23 winter.24 \
	winter.25 winter.26 winter.27 winter.28 winter.29 \
	winter.30 winter.31 winter.32 winter.33 winter.34

BUILT_SOURCES = \
	winter.h \
	winter_0.h winter_1.h winter_2.h winter_3.h winter_4.h \
	winter_5.h winter_6.h winter_7.h winter_8.h winter_9.h \
	winter_10.h winter_11.h winter_12.h winter_13.h winter_14.h \
	winter_15.h winter_16.h winter_17.h winter_18.h winter_19.h \
	winter_20.h winter_21.h winter_22.h winter_23.h winter_24.h \
	winter_25.h winter_26.h winter_27.h winter_28.h winter_29.h \
	winter_30.h winter_31.h winter_32.h winter_33.h winter_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

winter.h: $(top_srcdir)/materials/winter/winter.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

winter_0.h: \
  $(top_srcdir)/materials/winter/winter.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_1.h: \
  $(top_srcdir)/materials/winter/winter.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_2.h: \
  $(top_srcdir)/materials/winter/winter.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_3.h: \
  $(top_srcdir)/materials/winter/winter.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_4.h: \
  $(top_srcdir)/materials/winter/winter.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_5.h: \
  $(top_srcdir)/materials/winter/winter.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_6.h: \
  $(top_srcdir)/materials/winter/winter.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_7.h: \
  $(top_srcdir)/materials/winter/winter.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_8.h: \
  $(top_srcdir)/materials/winter/winter.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_9.h: \
  $(top_srcdir)/materials/winter/winter.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_10.h: \
  $(top_srcdir)/materials/winter/winter.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_11.h: \
  $(top_srcdir)/materials/winter/winter.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_12.h: \
  $(top_srcdir)/materials/winter/winter.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_13.h: \
  $(top_srcdir)/materials/winter/winter.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_14.h: \
  $(top_srcdir)/materials/winter/winter.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_15.h: \
  $(top_srcdir)/materials/winter/winter.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_16.h: \
  $(top_srcdir)/materials/winter/winter.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_17.h: \
  $(top_srcdir)/materials/winter/winter.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_18.h: \
  $(top_srcdir)/materials/winter/winter.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_19.h: \
  $(top_srcdir)/materials/winter/winter.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_20.h: \
  $(top_srcdir)/materials/winter/winter.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_21.h: \
  $(top_srcdir)/materials/winter/winter.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_22.h: \
  $(top_srcdir)/materials/winter/winter.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_23.h: \
  $(top_srcdir)/materials/winter/winter.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_24.h: \
  $(top_srcdir)/materials/winter/winter.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_25.h: \
  $(top_srcdir)/materials/winter/winter.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_26.h: \
  $(top_srcdir)/materials/winter/winter.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_27.h: \
  $(top_srcdir)/materials/winter/winter.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_28.h: \
  $(top_srcdir)/materials/winter/winter.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_29.h: \
  $(top_srcdir)/materials/winter/winter.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_30.h: \
  $(top_srcdir)/materials/winter/winter.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_31.h: \
  $(top_srcdir)/materials/winter/winter.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_32.h: \
  $(top_srcdir)/materials/winter/winter.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_33.h: \
  $(top_srcdir)/materials/winter/winter.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

winter_34.h: \
  $(top_srcdir)/materials/winter/winter.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
